--- a/gb/21/10/7/n13287687.md
+++ b/gb/21/10/7/n13287687.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pfeabi3282/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/pfeabi3282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/pfeabi3282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/pfeabi3282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/pfeabi3282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/pfeabi3282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/pfeabi3282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/pfeabi3282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/pfeabi3282/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/pfeabi3282/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pfeabi3282/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pfeabi3282/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pfeabi3282/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pfeabi3282/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pfeabi3282/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>商业房产与住宅房产投资的区别</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13287907-GettyImages-1207699531-600x400.jpg" />
 <h6>商业房产比较独特，这也让商业房产市场充满了机会，而且通常会带来更大的回报。( PETER PARKS/AFP via Getty Images)
 </h6>
 <hr>
-<p>【大纪元2021年10月07日讯】（大纪元记者朱丽娅悉尼编译报导）<ahref="https://github.com/pfeabi3282/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>的住宅房产市场是一个热门话题，对此，从你的律师到你的咖啡店老板，每个人都有各自的观点。</p>
+<p>【大纪元2021年10月07日讯】（大纪元记者朱丽娅悉尼编译报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>的住宅房产市场是一个热门话题，对此，从你的律师到你的咖啡店老板，每个人都有各自的观点。</p>
 <p>另一方面，商业房产比较独特，这也让商业房产市场充满了机会，而且通常会带来更大的回报。</p>
-<p>网站Realcommercial.com.au 比较了其中的差异，让<ahref="https://github.com/pfeabi3282/djy/blob/master/gb/tag/%E8%B4%AD%E6%88%BF%E8%80%85.md#1">购房者</a>在下次投资时能做出明智的决定。</p>
+<p>网站Realcommercial.com.au 比较了其中的差异，让<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B4%AD%E6%88%BF%E8%80%85.md#1">购房者</a>在下次投资时能做出明智的决定。</p>
 <p>商业房产和住宅房产之间有什么区别？</p>
 <p>1、租约长度</p>
 <p>商业房产的租约比住宅房产明显更长，而且更换商业租户比更换住房租户要困难得多，这在商业房产的估值中起着至关重要的作用。</p>
 <p>2、空置期</p>
-<p>由于很难更换商业租户，商业房产的空置期往往比住房的空置期要长。商业<ahref="https://github.com/pfeabi3282/djy/blob/master/gb/tag/%E6%8A%95%E8%B5%84%E8%80%85.md#1">投资者</a>往往不得不在没有租金收入的情况下承担物业的支出。</p>
+<p>由于很难更换商业租户，商业房产的空置期往往比住房的空置期要长。商业<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8A%95%E8%B5%84%E8%80%85.md#1">投资者</a>往往不得不在没有租金收入的情况下承担物业的支出。</p>
 <p>3、租赁条款</p>
-<p>虽然住房租约彼此之间的差异不大，但商业租约的相互差异却很大，几乎每一条款都有待商榷。商业<ahref="https://github.com/pfeabi3282/djy/blob/master/gb/tag/%E6%8A%95%E8%B5%84%E8%80%85.md#1">投资者</a>在律师和财务顾问的帮助下起草租赁合同</p>
+<p>虽然住房租约彼此之间的差异不大，但商业租约的相互差异却很大，几乎每一条款都有待商榷。商业<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8A%95%E8%B5%84%E8%80%85.md#1">投资者</a>在律师和财务顾问的帮助下起草租赁合同</p>
 <p>4、租金收益率</p>
 <p>商业房产的收益率通常为5%至12%，住宅房产的收益率为3%至4%，所以商业房产更有可能获得正现金流。</p>
 <p>5、年租金增长率</p>
@@ -50,46 +50,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/7/n13287650.md#1">全澳房产周转率达 到近12年来最高水平</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/4/n13279729.md#1">维州地产商Villawood进驻南澳 开发Oakden大型社区</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/4/n13279335.md#1">专家预判 澳洲未来五年十大房市趋势</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/1/n13273764.md#1">CoreLogic：过去一年澳洲房价激增逾20%</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/1/n13273064.md#1">分析：澳过半家庭房贷过重 一旦加息恐陷困境</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/9/29/n13267902.md#1">悉尼20公里内大部分区 购房需要200万</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/9/29/n13267851.md#1">分析发现：悉尼五分之二房主无力还贷</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/9/29/n13267821.md#1">专家预计：封锁最终解除时 房价上涨会加速</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/9/27/n13262490.md#1">疫情推高需求 南澳一年四万套物业易手</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679785.md#1">海岸侵蚀威胁逾2万套海景房 价值250亿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677047.md#1">州际移民持续增加 阿德莱德拍卖市场全澳最热</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676140.md#1">售房价超预期卖家满意度达63%创历史新高</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672390.md#1">不同位置的同样房子价格差距惊人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/17/n13651743.md#1">澳洲最容易从公寓房升级到独立房的地区</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672411.md#1">现今悉尼最受房产买家关注的十个热门区</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13662189.md#1">悉尼贷款债务问题最严重的地区</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13662167.md#1">大城市房产市场热潮现消褪迹象</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663558.md#1">逾10%悉尼房屋在2月降价销售</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/20/n13659125.md#1">新州洪水重灾区未来难料 逾4千房屋已无法居住</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/9/n11100959.md#1" target="_blank">共产暴政录：唐山大地震前后之怪相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/18/n11329746.md#1" target="_blank">传奇总统里根（10）：一封家书承载使命</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/9/30/n13272497.md#1">【百年真相】《何日君再来》引惨案 刘雪庵的悲剧人生</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/1/n13275161.md#1">【百年真相】耀眼明星的陨落 上官云珠坠楼真相</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/1/n13273915.md#1">美国动物灵媒：小猫能跨越不同维度</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/9/30/n13272470.md#1">璎珞：自佛国而来，尘世间最美的项链</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/1/n13275150.md#1">【未解之谜】轮回记忆揭秘 考古界未解难题</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/6/n13286538.md#1">【古韵流芳】善解人意的孝女 邓皇后受宠不骄</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/9/16/n13239387.md#1">【思想领袖】摩尔：中共结盟塔利班对抗西方</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/6/n13286384.md#1">【直播】白宫发言人召开新闻发布会</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/5/n13282122.md#1">消息披露傅政华被抓细节</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/5/n13282966.md#1">【拍案惊奇】傅政华孙力军有多嚣张？黑幕重重</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/5/n13281839.md#1">【中国观察】习近平在公安部的内部战争</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/4/n13281323.md#1">曾被马云问能否免费代言 黄渤回答获赞高情商</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/4/n13281782.md#1">马伊琍无奈表心声：女演员需要具备“三高”</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/6/n13284199.md#1">遭网民嘲讽学历太低 杨超越大气回应</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/4/n13280028.md#1">文彬演出涉抄袭ARASHI岚 TMA主办方致歉</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/5/n13283794.md#1">中港逾200部电影报名竞逐第58届金马奖</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/5/n13282786.md#1">松鼠在一辆汽车里藏了几千颗胡桃 车主苦恼</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/4/n13280276.md#1">善良竟然有疗愈力！提升免疫功能、抗炎抗病毒</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/5/n13282590.md#1">印度航空的飞机卡在高速公路天桥下</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/2/n13276115.md#1">降血压可增血管弹性！5方法让食物少盐又好吃</a></li>
-<li><a href="https://github.com/pfeabi3282/djy/blob/master/gb/21/10/4/n13280112.md#1">真是好狗命 澳洲小狗坐飞机商务舱外加庆生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pfeabi3282/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pfeabi3282/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/7/n13287687.htm">商业房产与住宅房产投资的区别</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/7/n13287687.htm">商业房产与住宅房产投资的区别</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pfeabi3282/djy/blob/master/gb/21/10/7/n13287687.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pfeabi3282/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pfeabi3282/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pfeabi3282/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pfeabi3282/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfeabi3282/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/7/n13287687.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
